--- a/src/content/docs/sharktrack.mdx
+++ b/src/content/docs/sharktrack.mdx
@@ -39,7 +39,7 @@ SharkTrack is a software that detects sharks and rays in underwater videos and c
 11. Bangkok, Thailand by [Metavee Chuangcharoendee from Thai Sharks and Rays](https://www.reshark.org/star-project)
 12. Maya Bay, Phi Phi Islands, Thailand AND Koh Tao, Thailand by Scarlett Taylor from Thai Department of Marine and Coastal Resources (DMCR)
 13. Scotland, UK by Tash Yates from Edinburgh Napier University
-13. Las Perlas Archipelago, Panama by Adam Whiting from University of Exeter
+13. Las Perlas Archipelago, Panama by the [Maralliance](https://maralliance.org/) team.
 
 ## Quick Trailer
 
