delete useless images

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -28,6 +28,12 @@ import inauguration from '../../assets/inauguration.jpg';
 
 ## Projects
 <LinkCard
+title="🗺️ OceanX"
+description="Develop Machine Learning for Deep Sea Ocean Exploration and Conservation"
+href="https://oceanx.org/"
+target="_blank"
+></LinkCard>
+<LinkCard
 title="🦈 SharkTrack"
 description="A Machine Learning software that researchers use worldwide to analyse underwater videos (BRUVS) in near-instant time."
 href="/sharktrack/"
