--- a/src/content/docs/sharktrack/user-guide.mdx
+++ b/src/content/docs/sharktrack/user-guide.mdx
@@ -5,20 +5,17 @@ description: How to download, install, and run SharkTrack on your BRUVS videos.
 
 import { Aside, LinkCard } from "@astrojs/starlight/components";
 
-<Aside type="tip">
-  SharkTrack is free and it makes us super-happy when people use it! Please fill in this [**30 seconds form**](https://forms.gle/sUeTarNqcTgxdyjU8) to tell us you are using SharkTrack.
+<Aside type="note">
+  SharkTrack is free and it makes us super-happy when people use it! If you do, can you please tell us by filling in this <a href="https://forms.gle/sUeTarNqcTgxdyjU8" target="_blank"><strong>30 seconds form?</strong></a>.
 </Aside>
 
 ## Overview
 
-This page guides you to download SharkTrack and run it on your videos. This completes **Step 1** of the BRUVS analysis process.
-
-{/* TODO: Uncomment when you have the step 1 image */}
-{/* ![Step 1 diagram](../../../assets/figure1.png) */}
+This page guides you to download SharkTrack and run it on your videos. This completes **Step 1** of the BRUVS analysis process: **Automatic Processing**.
 
 > Given a folder or hard drive with BRUVS, SharkTrack automatically processes the videos, detects elasmobranchs, saves detection information in a CSV file, and stores a detection image for each individual elasmobranch found.
 
-Once you have the output, move to the [Annotation Pipeline](/sharktrack/annotation-pipeline/) to compute MaxN.
+Once you have the output, move to Step 2: [Manual Review](/sharktrack/annotation-pipeline/), to compute MaxN.
 
 ---
 
@@ -57,6 +54,10 @@ You must have **Python 3.9** or above.
 - Right-click on the `sharktrack` folder
 - Click "New Terminal at Folder" (sometimes under Services)
 
+<Aside type="tip">
+  If you are familiar with Git, you can just clone the <a href="https://github.com/filippovarini/sharktrack" target="_blank">repository</a>.
+</Aside>
+
 ### Setup Environment
 
 Now that you have the Terminal open at the `sharktrack` folder, set up the environment:
@@ -77,10 +78,8 @@ pip install -r requirements.txt
 
 **On macOS / Linux:**
 ```bash
-python -m venv venv
+python3 -m venv venv
 ```
-
-If that fails, try: `python3 -m venv venv`
 
 Then:
 ```bash
@@ -137,9 +136,9 @@ python app.py --arg1 {val1} --arg2 {val2} --arg3
 | `--limit {n}` | Maximum number of videos to process. | `1000` |
 | `--conf {value}` | Custom confidence threshold. | `0.25` |
 | `--output {path}` | Path to output folder. | `./outputs` |
-| `--peek` | Run in [Peek Mode](#sharktrack-peek-mode). | — |
-| `--chapters` | Aggregate video chapters into one single video. | — |
-| `--resume` | Skip videos already analysed in the output path. | — |
+| `--peek` | Run in [Peek Mode](#sharktrack-peek-mode). | False |
+| `--chapters` | Aggregate video chapters into one single video. | False |
+| `--resume` | Skip videos already analysed in the output path. | False |
 
 **Example:**
 ```bash
@@ -151,7 +150,7 @@ python app.py --input G:\BRUVS_2023 --peek --stereo_prefix L
 
 ## SharkTrack Peek Mode
 
-Use SharkTrack to extract interesting frames without full tracking. This "peek" version runs **5x faster**, taking ~15% of real video time.
+Use SharkTrack to extract interesting frames without full tracking. This "peek" version runs **5x faster**, but it doesn't track the shark or allow to compute MaxN.
 
 Activate with the `--peek` argument:
 ```bash
