sharktrack pipeline figure

--- a/src/content/docs/sharktrack/index.mdx
+++ b/src/content/docs/sharktrack/index.mdx
@@ -72,7 +72,7 @@ We tested the performance of SharkTrack in [Varini et al 2024](https://www.arxiv
 
 SharkTrack analyses BRUVS in two steps:
 
-![The SharkTrack pipeline](/src/assets/sharktrack/sharktrack-pipeline-figure.png)
+![The SharkTrack pipeline](../../../assets/sharktrack/sharktrack-pipeline-figure.png)
 
 ### Step 1: Automatic Processing
 
