--- a/src/content/docs/sharktrack/index.mdx
+++ b/src/content/docs/sharktrack/index.mdx
@@ -128,8 +128,9 @@ If you use SharkTrack, please cite:
 
 ```bibtex
 @article{varini2024sharktrack,
-  title={SharkTrack},
-  author={Filippo Varini et al},
+  title={SharkTrack: an accurate, generalisable software for streamlining shark and ray underwater video analysis},
+  author={Varini, F. and Gayford, J. H. and Jenrette, J. and Witt, M. J. and Garzon, F. and Ferretti, F. and Glocker, B.},
+  journal={arXiv preprint arXiv:2407.20623},
   year={2024}
 }
 ```
